--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8080
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/reading_list
+spring.datasource.username=reader
+spring.datasource.password=NurlaN#$%
